ecmascript/parser/tests/typescript-errors/class/declare-private-name/input.ts.stderr
error: 'declare' modifier cannot be used with a private identifier
 --> $DIR/tests/typescript-errors/class/declare-private-name/input.ts:2:13
  |
2 |     declare #name;
  |             ^^^^^

error: `declare` modifier cannot appear on a class element
 --> $DIR/tests/typescript-errors/class/declare-private-name/input.ts:2:5
  |
2 |     declare #name;
  |     ^^^^^^^

